unpackaged/main/default/objects/Contract/fields/Additional_Usage_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Billing_Frequency__c</fullName>
    <label>Additional Usage: Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>