unpackaged/main/default/objects/Contract/fields/Additional_Usage_External_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_External_Overage_Rate__c</fullName>
    <label>Additional Usage: External Overage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>