unpackaged/main/default/objects/Contract/fields/Additional_Usage_Included__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Usage: Included?</label>
    <type>Checkbox</type>
</CustomField>