unpackaged/main/default/objects/Contract/fields/Additional_Usage_Int_User_Domain_List__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Int_User_Domain_List__c</fullName>
    <label>Additional Usage: Int User Domain List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>