unpackaged/main/default/objects/Contract/fields/Additional_Usage_Language__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usage_Language__c</fullName>
    <label>Additional Usage: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>