unpackaged/main/default/objects/Contract/fields/Agreement_Issues__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Issues__c</fullName>
    <label>Agreement Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>