unpackaged/main/default/objects/Contract/fields/Agreement_Upload_Method__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Upload_Method__c</fullName>
    <label>Agreement Upload Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>