unpackaged/main/default/objects/Contract/fields/Assignment_or_Transfer_Included__c.field-meta.xml
<CustomField>
    <fullName>Assignment_or_Transfer_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment or Transfer: Included?</label>
    <type>Checkbox</type>
</CustomField>