unpackaged/main/default/objects/Contract/fields/Attachment_MSA_Included__c.field-meta.xml
<CustomField>
    <fullName>Attachment_MSA_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment - MSA: Included?</label>
    <type>Checkbox</type>
</CustomField>