unpackaged/main/default/objects/Contract/fields/Attachment_Other_Included__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Other_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment - Other: Included?</label>
    <type>Checkbox</type>
</CustomField>