unpackaged/main/default/objects/Contract/fields/Attachment_Support_Policy_Included__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Support_Policy_Included__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attachment - Support Policy: Included?</label>
    <type>Checkbox</type>
</CustomField>