unpackaged/main/default/objects/Contract/fields/Auto_renew_Period_mo__c.field-meta.xml
<CustomField>
    <fullName>Auto_renew_Period_mo__c</fullName>
    <label>Auto-renewal: Period (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>