unpackaged/main/default/objects/Contract/fields/Auto_renewal_notice_days__c.field-meta.xml
<CustomField>
    <fullName>Auto_renewal_notice_days__c</fullName>
    <label>Auto-renewal: Notice (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>