unpackaged/main/default/objects/Contract/fields/Billing_Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Country Definition</label>
    <referenceTo>Country_Definition__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>