unpackaged/main/default/objects/Contract/fields/Billing_Country_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Subregion__c</fullName>
    <label>Billing Country: Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>