unpackaged/main/default/objects/Contract/fields/BillingCountryLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Country Lookup</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Contract (BillingCountryLookup)</relationshipLabel>
    <relationshipName>FKBillingCountryLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>