unpackaged/main/default/objects/Contract/fields/BillingStateLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingStateLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing State Lookup</label>
    <referenceTo>pw_ccpro__State__c</referenceTo>
    <relationshipLabel>Contract (BillingStateLookup)</relationshipLabel>
    <relationshipName>FKBillingStateLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>