unpackaged/main/default/objects/Contract/fields/BillingZipCodeLookupAuto__c.field-meta.xml
<CustomField>
    <fullName>BillingZipCodeLookupAuto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing ZipCode Lookup</label>
    <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
    <relationshipLabel>Contract (BillingZipCodeLookup)</relationshipLabel>
    <relationshipName>FKBillingZipCodeLookupAuto</relationshipName>
    <type>Lookup</type>
</CustomField>