unpackaged/main/default/objects/Contract/fields/Bulk_Purchase_Option_Included__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Purchase_Option_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Purchase Option: Included?</label>
    <type>Checkbox</type>
</CustomField>