unpackaged/main/default/objects/Contract/fields/Bulk_Purchase_Option_Unit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Purchase_Option_Unit_Quantity__c</fullName>
    <label>Bulk Purchase Option: Unit Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>