unpackaged/main/default/objects/Contract/fields/Bulk_Purchase_Option_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Purchase_Option_Unit_Type__c</fullName>
    <label>Bulk Purchase Option: Unit Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>