unpackaged/main/default/objects/Contract/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <label>Business Unit: Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>