unpackaged/main/default/objects/Contract/fields/Clazar_Offer_Standard_Name__c.field-meta.xml
<CustomField>
    <fullName>Clazar_Offer_Standard_Name__c</fullName>
    <formula>IF(Marketplace_Terms_Included__c,
&quot;Retool offer for &quot;&amp;
IF(ISBLANK(Customer_Entity_Name__c),Opportunity__r.Name_Entity_Prefix__c,Customer_Entity_Name__c)
&amp;&quot; (&quot;&amp;Marketplace_Terms_Account_Number__c&amp;&quot;) &quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clazar Offer: Standard Name</label>
    <type>Text</type>
</CustomField>