unpackaged/main/default/objects/Contract/fields/Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_ID__c</fullName>
    <label>Content Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>