unpackaged/main/default/objects/Contract/fields/Continuity_of_Access_Included__c.field-meta.xml
<CustomField>
    <fullName>Continuity_of_Access_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuity of Access: Included?</label>
    <type>Checkbox</type>
</CustomField>