unpackaged/main/default/objects/Contract/fields/Contract_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract ID (case safe)</label>
    <type>Text</type>
</CustomField>