unpackaged/main/default/objects/Contract/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <label>Contract Link</label>
    <type>Url</type>
</CustomField>