unpackaged/main/default/objects/Contract/fields/Contract_Restructure_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Restructure_Credit_Amount__c</fullName>
    <label>Contract Restructure: Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>