unpackaged/main/default/objects/Contract/fields/Contract_Restructure_Included__c.field-meta.xml
<CustomField>
    <fullName>Contract_Restructure_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Restructure: Included?</label>
    <type>Checkbox</type>
</CustomField>