unpackaged/main/default/objects/Contract/fields/Contract_Restructure_Language__c.field-meta.xml
<CustomField>
    <fullName>Contract_Restructure_Language__c</fullName>
    <label>Contract Restructure: Language</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>