unpackaged/main/default/objects/Contract/fields/Controlling_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Agreement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a contract on this account with an MSA</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>