unpackaged/main/default/objects/Contract/fields/Controlling_Agreement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Agreement_Effective_Date__c</fullName>
    <formula>IF(ISBLANK(Controlling_Agreement__c),NULL, Controlling_Agreement__r.Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controlling Agreement: Effective Date</label>
    <type>Date</type>
</CustomField>