unpackaged/main/default/objects/Contract/fields/Controlling_Agreement_Governing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Agreement_Governing_Terms__c</fullName>
    <formula>IF(ISBLANK(Controlling_Agreement__c),NULL, TEXT(Controlling_Agreement__r.Governing_Terms__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controlling Agreement: Governing Terms</label>
    <type>Text</type>
</CustomField>