unpackaged/main/default/objects/Contract/fields/Custom_Billing_Instructions_Included__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing_Instructions_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Billing Instructions: Included?</label>
    <type>Checkbox</type>
</CustomField>