unpackaged/main/default/objects/Contract/fields/Custom_Billing_Instructions_Language__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing_Instructions_Language__c</fullName>
    <label>Custom Billing Instructions: Language</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>