unpackaged/main/default/objects/Contract/fields/Customer_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Entity_Name__c</fullName>
    <label>Customer Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>