unpackaged/main/default/objects/Contract/fields/Customer_Opt_Out_Included__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opt_Out_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Opt Out: Included?</label>
    <type>Checkbox</type>
</CustomField>