unpackaged/main/default/objects/Contract/fields/Deal_Created_At_Month__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_At_Month__c</fullName>
    <formula>DATE(YEAR(DATEVALUE(RO_Deal_Created_At__c)),MONTH(DATEVALUE(RO_Deal_Created_At__c)),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Created At Month</label>
    <type>Date</type>
</CustomField>