unpackaged/main/default/objects/Contract/fields/Deal_Created_At_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_At_Quarter__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(RO_Deal_Created_At__c)))
&amp; &quot;-&quot;&amp;
CASE(Month(DATEVALUE(RO_Deal_Created_At__c)),
1, &quot;Q1&quot; ,
2, &quot;Q1&quot;,
3, &quot;Q1&quot;,
4, &quot;Q2&quot;,
5, &quot;Q2&quot;,
6, &quot;Q2&quot;,
7, &quot;Q3&quot;,
8, &quot;Q3&quot;,
9, &quot;Q3&quot;,
10, &quot;Q4&quot;,
11, &quot;Q4&quot;,
12, &quot;Q4&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Created At Quarter</label>
    <type>Text</type>
</CustomField>