unpackaged/main/default/objects/Contract/fields/Deal_Created_At_Week__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_At_Week__c</fullName>
    <formula>CASE(MOD(DATEVALUE(RO_Deal_Created_At__c) - DATE(1900, 1, 6), 7),
0, DATEVALUE(RO_Deal_Created_At__c) + 0,
1, DATEVALUE(RO_Deal_Created_At__c) + 6,
2, DATEVALUE(RO_Deal_Created_At__c) + 5,
3, DATEVALUE(RO_Deal_Created_At__c) + 4,
4, DATEVALUE(RO_Deal_Created_At__c) + 3,
5, DATEVALUE(RO_Deal_Created_At__c) + 2,
6, DATEVALUE(RO_Deal_Created_At__c)+ 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Created At Week</label>
    <type>Date</type>
</CustomField>