unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Department__c</fullName>
    <label>Deal Created By: Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>