unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Email__c</fullName>
    <label>Deal Created By: Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>