unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Role__c</fullName>
    <label>Deal Created By: Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>