unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Subteam__c</fullName>
    <label>Deal Created By: Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>