unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Team__c</fullName>
    <label>Deal Created By: Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>