unpackaged/main/default/objects/Contract/fields/Deal_Created_By_Territory__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Territory__c</fullName>
    <label>Deal Created By: Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>