unpackaged/main/default/objects/Contract/fields/Deal_Desk_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Submitted_At__c</fullName>
    <label>Deal Desk Submitted At</label>
    <type>DateTime</type>
</CustomField>