unpackaged/main/default/objects/Contract/fields/Deal_Desk_Submitted_During_Bus_Hours__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Submitted_During_Bus_Hours__c</fullName>
    <formula>HOUR(TIMEVALUE(Deal_Desk_Submitted_At__c)) &gt;= 8 &amp;&amp; HOUR(TIMEVALUE(Deal_Desk_Submitted_At__c)) &lt;= 17</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Desk Submitted During Bus Hours?</label>
    <type>Checkbox</type>
</CustomField>