unpackaged/main/default/objects/Contract/fields/Deal_Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Department__c</fullName>
    <label>Deal Owner: Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>