unpackaged/main/default/objects/Contract/fields/Deal_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Email__c</fullName>
    <label>Deal Owner: Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>