unpackaged/main/default/objects/Contract/fields/Deal_Owner_Level__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Level__c</fullName>
    <label>Deal Owner: Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>