unpackaged/main/default/objects/Contract/fields/Deal_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Role__c</fullName>
    <label>Deal Owner: Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>