unpackaged/main/default/objects/Contract/fields/Deal_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Team__c</fullName>
    <label>Deal Owner: Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>