unpackaged/main/default/objects/Contract/fields/Deal_Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner_Territory__c</fullName>
    <label>Deal Owner: Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>