unpackaged/main/default/objects/Contract/fields/DocuSign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_ID__c</fullName>
    <externalId>true</externalId>
    <label>DocuSign Envelope ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>