unpackaged/main/default/objects/Contract/fields/Early_Termination_Language__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Language__c</fullName>
    <label>Early Termination: Language</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>