unpackaged/main/default/objects/Contract/fields/Enterprise_Support_Included__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Support_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Support: Included?</label>
    <type>Checkbox</type>
</CustomField>