unpackaged/main/default/objects/Contract/fields/Enterprise_Support_Region__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Support_Region__c</fullName>
    <label>Enterprise Support: Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Regions</valueSetName>
    </valueSet>
</CustomField>