unpackaged/main/default/objects/Contract/fields/Feature_List_Page_Language__c.field-meta.xml
<CustomField>
    <fullName>Feature_List_Page_Language__c</fullName>
    <label>Feature List Page: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>