unpackaged/main/default/objects/Contract/fields/First_Approval_At__c.field-meta.xml
<CustomField>
    <fullName>First_Approval_At__c</fullName>
    <label>First Approval At</label>
    <type>DateTime</type>
</CustomField>