unpackaged/main/default/objects/Contract/fields/Governing_Agreement_Included__c.field-meta.xml
<CustomField>
    <fullName>Governing_Agreement_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governing Agreement: Included?</label>
    <type>Checkbox</type>
</CustomField>