unpackaged/main/default/objects/Contract/fields/Governing_Agreement_Language__c.field-meta.xml
<CustomField>
    <fullName>Governing_Agreement_Language__c</fullName>
    <label>Governing Agreement: Language</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>