unpackaged/main/default/objects/Contract/fields/Governing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Governing_Terms__c</fullName>
    <label>Governing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online ToS</fullName>
            </value>
            <value>
                <fullName>Standard MSA</fullName>
            </value>
            <value>
                <fullName>Custom MSA</fullName>
            </value>
            <value>
                <fullName>Pre-Existing MSA</fullName>
            </value>
            <value>
                <fullName>Attached ToS</fullName>
            </value>
            <value>
                <fullName>Reseller Agreement</fullName>
            </value>
            <value>
                <fullName>Reseller Without Reseller Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>