unpackaged/main/default/objects/Contract/fields/Has_Agreement_Issues__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreement_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Agreement Issues?</label>
    <type>Checkbox</type>
</CustomField>