unpackaged/main/default/objects/Contract/fields/Is_Controlling_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Controlling_Contract__c</fullName>
    <formula>Opportunity__r.Contract.Id =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Controlling Contract?</label>
    <type>Checkbox</type>
</CustomField>