unpackaged/main/default/objects/Contract/fields/Klarity_ID__c.field-meta.xml
<CustomField>
    <fullName>Klarity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Klarity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>