unpackaged/main/default/objects/Contract/fields/Last_Approval_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_At__c</fullName>
    <label>Last Approval At</label>
    <type>DateTime</type>
</CustomField>