unpackaged/main/default/objects/Contract/fields/Marketing_Terms_Language__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Terms_Language__c</fullName>
    <label>Marketing Terms: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>