unpackaged/main/default/objects/Contract/fields/Marketing_Terms_Use_Customer_Brand__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Terms_Use_Customer_Brand__c</fullName>
    <label>Marketing Terms: Use Customer Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes With Permission</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>