unpackaged/main/default/objects/Contract/fields/Marketplace_Terms_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Terms_Account_Number__c</fullName>
    <label>Marketplace Terms: Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>