unpackaged/main/default/objects/Contract/fields/Marketplace_Terms_Buyer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Terms_Buyer_Last_Name__c</fullName>
    <label>Marketplace Terms: Buyer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>