unpackaged/main/default/objects/Contract/fields/Marketplace_Terms_Marketplace_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Terms_Marketplace_Name__c</fullName>
    <label>Marketplace Terms: Marketplace Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Marketplace_Names</valueSetName>
    </valueSet>
</CustomField>