unpackaged/main/default/objects/Contract/fields/MSA_Custom_Included__c.field-meta.xml
<CustomField>
    <fullName>MSA_Custom_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA (Custom): Included?</label>
    <type>Checkbox</type>
</CustomField>