unpackaged/main/default/objects/Contract/fields/MSA_Enumerate_high_risk_activities__c.field-meta.xml
<CustomField>
    <fullName>MSA_Enumerate_high_risk_activities__c</fullName>
    <label>MSA: Enumerate high risk activities?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>