unpackaged/main/default/objects/Contract/fields/MSA_Payment_late_if_disputed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Payment_late_if_disputed__c</fullName>
    <label>MSA: Payment late if disputed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>