unpackaged/main/default/objects/Contract/fields/Number_of_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvals__c</fullName>
    <label>Number of Approvals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>