unpackaged/main/default/objects/Contract/fields/Order_Form_Terms_of_Service_Included__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Terms_of_Service_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Form: Terms of Service Included?</label>
    <type>Checkbox</type>
</CustomField>