unpackaged/main/default/objects/Contract/fields/Order_Form_Terms_of_Service_Language__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Terms_of_Service_Language__c</fullName>
    <label>Order Form Terms of Service: Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>