unpackaged/main/default/objects/Contract/fields/Partner_Deal_Support_Alert__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deal_Support_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Deal Support Alert</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>