unpackaged/main/default/objects/Contract/fields/Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Relationship</label>
    <referenceTo>Partner_Relationship__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>