unpackaged/main/default/objects/Contract/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <defaultValue>&quot;Not required&quot;</defaultValue>
    <label>zOLD PO Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>