unpackaged/main/default/objects/Contract/fields/Price_Guarantee_Included__c.field-meta.xml
<CustomField>
    <fullName>Price_Guarantee_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Guarantee: Included?</label>
    <type>Checkbox</type>
</CustomField>