unpackaged/main/default/objects/Contract/fields/Price_Guarantee_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Price_Guarantee_Increase_Amount__c</fullName>
    <label>Price Guarantee: Increase Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>